--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/com/itrust/controller/UserController.java=UTF-8
-encoding//webapp/jsp/result.jsp=UTF-8
+encoding//webapp/view/navigation.html=UTF-8
