--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -29,13 +29,10 @@
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.html</welcome-file>
+
 	</welcome-file-list>
-	<!-- <error-page>
-		<error-code>404</error-code>
-		<location>/index.jsp</location>
-	</error-page>
-	<error-page>
-		<error-code>500</error-code>
-		<location>/index.jsp</location>
-	</error-page> -->
+	<!-- <error-page> <error-code>404</error-code> <location>/index.jsp</location> 
+		</error-page> <error-page> <error-code>500</error-code> <location>/index.jsp</location> 
+		</error-page> -->
 </web-app>
