初始化页面框架

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/com/itrust/controller/UrlController.java=UTF-8
 encoding//src/com/itrust/controller/UserController.java=UTF-8
 encoding//webapp/view/navigation.html=UTF-8
